# Kapremont

./: .env  manage.py  pyproject.toml
kapremont_proj/: asgi.py  settings.py  urls.py  wsgi.py
pages/: urls.py
templates/: base.html  home.html
users/migrations/: 0001_initial.py
